更改项目结构

--- a/src/html/login/login.html
+++ b/src/html/login/login.html
@@ -34,7 +34,8 @@
           <button id="login2" type="submit" class="btn btn-primary btn-block" onclick="login()">登录</button>
           <!-- 使用JavaScript或jQuery等获取后端返回的错误信息并显示 -->
           <!-- 以下仅为示例，实际实现需配合后端API -->
-          <script src="../../js/login/login.js">
+<!--          <script src="../../js/login/login.js">-->
+          <script src="/src/js/login/login.js">
             /*function login(){
               alert("登录成功")
             }
